# pm

./: .gitattributes  .gitignore  .gitignore.io  .gitignore.local  .gitmodules  .gitmodules.github  .project  .pydevproject  CHANGELOG.md  MANIFEST.in  README.md  README.rst  appveyor.yml  buildui.py  create_venv.py  p.git_bundle  pyinstaller.spec  pyproject.toml  pytest.ini  requirements.build  requirements.test  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
pm/: __init__.py  __main__.py  __main__.ui  attrsmodel.py  main_window.py  mainwindow.py  parametermodel.py  parameters.py  symbolmodel.py
requirements/: base.in  base.linux.txt  base.macos.txt  base.windows.txt  local.txt  pre.in  pre.linux.txt  pre.macos.txt  pre.windows.txt  test.in  test.linux.txt  test.macos.txt  test.windows.txt
src/epcpm/: __build.py  __init__.py  __main__.py  __main__.ui  __version.py  __version__.py  _build.py  _version.py  anomaliestoc.py  anomaliestoxlsx.py  anomalymodel.py  attrsmodel.py  builduipm.py  builduitwo.py  c.py  canmodel.py  cantosym.py  cantotablesc.py  cantoxlsx.py  importdialog.py  importdialog.ui  importexport.py  importexportdialog.py  importexportdialog.ui  mainwindow.py  mainwindow.ui  parametermodel.py  parameterstobitfieldsc.py  parameterstoc.py  parameterstodocx.py  parameterstohierarchy.py  parameterstointerface.py  parameterstosil.py  pm_helper.py  project.py  smdx.py  smdxtosunspec.py  staticmodbusmodel.py  staticmodbustobitfieldsc.py  staticmodbustoc.py  (+14 more)
src/epcpm/cli/: convertepp.py  exportdocx.py  exportsym.py  generate_700_models.py  importsym.py  main.py  parameterstoc.py  sunspectostaticmodbus.py  utils.py
src/epcpm/tests/: example_can.json  example_parameters.json  example_project.pmp  example_symbols.json  test_anomalymodel.py  test_c.py  test_canmodel.py  test_cantosym.py  test_importdialog.py  test_importexportdialog.py  test_parametermodel.py  test_parameters.py  test_parameterstoc.py  test_parameterstohierarchy.py  test_project.py  test_roundtrip.py  test_smdxtosunspec.py  test_staticmodbusmodel.py  test_sunspecmodel.py  test_sunspectmodel.py  test_sunspectomanualc.py  test_sunspectoxlsx.py  test_symbolmodel.py  test_symbolstosym.py  test_symtocan.py  test_symtoproject.py  test_symtosymbols.py  test_valuesetmodel.py
src/epcpm/tests/cli/: descriptions_collate_script.py  descriptions_import_script.py  descriptions_transfer_script.py  test_parameterstoc.pmp  test_parameterstoc.py  test_parameterstoc_can.json  test_parameterstoc_parameters.json  test_parameterstoc_symbols.json
src/epcpm/tests/project/: anomalies.json  can.json  parameters.json  project.pmp  staticmodbus.json  sunspec.json  sunspec2.json
src/epcpm/tests/sunspec/: MODBUS_SunSpec-EPC.xlsx  smdx_00001.xml  smdx_00017.xml  smdx_00103.xml  smdx_65534.xml
tests/: example_parameters.json  example_parameters.out.json  example_symbols.json  test_parameters.py
