[tool.poetry]
name = "epcpm"
version = "0.1.0"
description = ""
authors = ["Alex Anker <alex.anker@epcpower.com>"]
readme = "README.md"
include = ["src/*"]

[tool.poetry-dynamic-versioning]
#set to false.  poetry-dynamic-versioning only needed for CI versioning.
enable = true
vcs = "git"
style = "pep440"

[tool.poetry-dynamic-versioning.substitution]
#poetry-dynamic-versioning has auto subsitution for __init__.py files,
#but not for more than 1 directory out of root.
files = ["src/epcpm/__init__.py"]

[[tool.poetry.source]]
name = "epc-power"
url = "https://epc-power-us-890711758583.d.codeartifact.us-east-2.amazonaws.com/pypi/epc-power/simple"
priority = "explicit"

[[tool.poetry.source]]
name = "third-party"
url = "https://epc-power-us-890711758583.d.codeartifact.us-east-2.amazonaws.com/pypi/third-party/simple"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.7.9,<3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
