[tool.poetry]
name = "epcpm"
version = "0.1.0"
description = ""
authors = ["Alex Anker <alex.anker@epcpower.com>"]
readme = "README.md"
include = ["src/*"]

[tool.poetry-dynamic-versioning]
#set to false.  poetry-dynamic-versioning only needed for CI versioning.
enable = true
vcs = "git"
style = "pep440"

[tool.poetry-dynamic-versioning.substitution]
#poetry-dynamic-versioning has auto subsitution for __init__.py files,
#but not for more than 1 directory out of root.
files = ["src/epcpm/__init__.py"]

[[tool.poetry.source]]
name = "epc-power"
url = "https://epc-power-us-890711758583.d.codeartifact.us-east-2.amazonaws.com/pypi/epc-power/simple"
priority = "explicit"

[[tool.poetry.source]]
name = "third-party"
url = "https://epc-power-us-890711758583.d.codeartifact.us-east-2.amazonaws.com/pypi/third-party/simple"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.7.9,<3.11"

#### EPC Repos ####
#sunspecdemo = {version = "0.3.0", source = "epc-power"}
sunspecdemo = { git = "https://github.com/epcpower/sunspec-demo.git", rev = "a04b466da431549946297c66364ee835c3fab3e0" }

###################

attrs = "20.2.0"
lxml = "4.3.0"
PyQt5 = "5.13.2"
requests = "2.27.1"
toolz = "0.9.0"
tox = "3.24.5"
xmldiff = "2.2"
openpyxl = "2.5.12"
canmatrix = "0.9.1"
graham = "0.1.11"
pyserial = "3.4"
pysunspec = "2.1.0"
pycparser = "2.21"
Twisted = "21.2.0"
python-can = "4.0.0"
Jinja2 = "^3.0.3"
click = "<=7.1.2"
qt5reactor = "0.5"
tqdm = "4.32.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
