[tool.poetry]
name = "epcpm"
version = "0.0.0"
description = "EPC Power Parameter Manager"
authors = ["Alex Anker <alex.anker@epcpower.com>"]
include = ["src/*"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry-dynamic-versioning.substitution]
#poetry-dynamic-versioning has auto subsitution for __init__.py files,
#but not for more than 1 directory out of root.
files = ["src/epcpm/__init__.py"]

[[tool.poetry.source]]
name = "epc-power"
url = "https://epc-power-us-890711758583.d.codeartifact.us-east-2.amazonaws.com/pypi/epc-power/simple"
priority = "explicit"

[[tool.poetry.source]]
name = "third-party"
url = "https://epc-power-us-890711758583.d.codeartifact.us-east-2.amazonaws.com/pypi/third-party/simple"
priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.7.9,<3.11"

#### EPC Repos ####
#sunspecdemo = {version = "0.3.0", source = "epc-power"}
sunspecdemo = { git = "https://github.com/epcpower/sunspec-demo.git", rev = "a04b466da431549946297c66364ee835c3fab3e0" }

###################

attrs = "20.2.0"
lxml = "4.3.0"
PyQt5 = "5.13.2"
requests = "2.27.1"
toolz = "0.9.0"
tox = "3.24.5"
xmldiff = "2.2"
openpyxl = "2.5.12"
canmatrix = "0.9.1"
graham = "0.1.11"
pyserial = "3.4"
pysunspec = "2.1.0"
pycparser = "2.21"
Twisted = "21.2.0"
python-can = "4.0.0"
Jinja2 = "^3.0.3"
click = "<=7.1.2"
qt5reactor = "0.5"
tqdm = "4.32.1"

[tool.poetry.group.dev.dependencies]
epyqlib = {path = "./sub/epyqlib",  develop = true}
gitignoreio = "0.1.5"
pyinstaller = "4.4"
black = ">=20.8b1"
pytest = "6.2.4"
pytest-qt = "3.3.0"
pytest-cov = "2.5.1"
pytest-twisted = "<=1.13.4"
twine = "3.1.1"

[tool.poetry.scripts]
epcpmcli = 'epcpm.cli.main:main'
epcparameterstoc = 'epcpm.cli.parameterstoc:cli'
epcimportsym = 'epcpm.cli.importsym:cli'
epcexportsym = 'epcpm.cli.exportsym:cli'
epcexportdocx = 'epcpm.cli.exportdocx:cli'
epcconvertparameters = 'epcpm.cli.convertepp:cli'
builduipm = 'epcpm.builduipm:compile_ui'
epcpm = 'epcpm.__main__:_entry_point'

[tool.black]
target-version =  ['py37']
include = '''
^/(
    | src/epcpm/.*\.pyi?
)$
'''
exclude = './.venv'

[build-system]
requires = [
    "setuptools",
    "wheel",
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning>=1.0.0,<2.0.0",

]
build-backend = "poetry_dynamic_versioning.backend"
